<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:elevation="50dp"
    android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/hour_glass"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Time is Over"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="35sp"

                />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="@color/buttonColor"

                    android:text="@string/better_luck"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <Button
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textSize="15dp"
                    android:text="@string/main_menu"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button_1"
                    android:id="@+id/mainmenu"
                    />
                <Button
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textSize="15sp"
                    android:text="@string/play_again"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button_1"
                    android:id="@+id/playagain"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

