<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="2.5dp"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/background"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_layout"
            android:padding="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                   android:src="@drawable/ic_sentiment_satisfied_black_24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="You have passed this level"
                    android:textAlignment="center"
                    android:textColor="@color/buttonColor"
                    android:textSize="40sp"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="@color/background2"
                    android:text="@string/congrats"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <Button
                    android:id="@+id/mainMenuButton"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textSize="15sp"
                    android:text="@string/main_menu"
                    android:fontFamily="serif"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button_1"
                    />
                <Button
                    android:id="@+id/playagainButton"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:text="@string/play_again"
                    android:fontFamily="serif"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button_1"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>